--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
 ul{
     list-style: none;
     margin-bottom: 0 !important;
-    padding-left: 2rem !important;
+    padding-left: 0rem !important;
 }
 
 a{
@@ -155,7 +155,7 @@ section{
     position: absolute;
     top: 100%;
     left: 0;
-    width: 22rem;
+    width: 35rem;
     transform: translateY(10px);
     opacity: 0;
     pointer-events: none;
@@ -1044,7 +1044,7 @@ ul .nav-link a:hover {
         opacity: 0;
         transform: translateY(15px);
     }
-    .container {
+    .container-custom {
         max-width: 84rem;
     }
     .login__button {
