--- a/css/course_detail.css
+++ b/css/course_detail.css
@@ -119,7 +119,10 @@
     flex-direction: row;
     border-radius: 60px;
 }
-.advantage__second {
+.advantage__first__text, .advantage__second__text, .advantage__third__text, .advantage__fourth__text {
+    padding-left: 1rem;
+}
+.advantage__second, .advantage__third, .advantage__fourth{
     background-color: white;
     box-shadow: 0px 4px 12px rgba(0,0,0,0.25);
     padding: 1rem 1rem 0.7rem 1rem;
@@ -127,9 +130,13 @@
     flex-direction: row;
     border-radius: 60px;
 }
-.advantage__second__text {
+.advantage__third, .advantage__fourth {
+    margin-top: 2rem;
+}
+.advantage__first__text, .advantage__fourth__text {
     padding-top: 0.7rem;
 }
+
 .advantage__margin__align {
     margin-bottom: 5rem;
 }
