--- a/css/promo_document.css
+++ b/css/promo_document.css
@@ -5,12 +5,14 @@
     padding: 1rem;
     position: sticky;
     height: 100%;
-    top: 40px;
+    top: 64px;
+    z-index: 3;
 }
 .promo__document__text {
     font-size: 35px;
     font-weight: 600;
     color: white;
+
 }
 p {
     margin-bottom: 0 !important;
@@ -19,11 +21,124 @@ p {
     background-image: linear-gradient(rgba(29, 27, 27, 0.88), rgba(29, 27, 27, 0.88)),  url('/images/drone-quadcopter.png');
     background-size: cover;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 .overlay__container__promo {
     max-width: 100%;
     height: 100%;
-    z-index: 2;
-    position: relative;
+
+}
+input[type="radio"] {
+    transform: scale(2);
+    margin-top: 6rem;
+}
+label.form-check-label {
+    margin-top: 5rem;
+    margin-left: 1rem;
+    color: white;
+    font-size: 30px;
+}
+.search__input {
+    border-radius: 1000px !important;
+    padding: 1rem 2rem 1rem 2rem !important;
+    filter: drop-shadow(0px 4px 4px rgba(0,0,0,0.25));
+}
+.footer__text {
+    text-align: center;
+    font-size: 32px;
+}
+.footer__block {
+    width: 100%;
+    padding: 1.5rem;
+    filter: drop-shadow(0px -3px 4px rgba(0,0,0,0.25));
+    background-color: white;;
+}
+.margin__bottom__align {
+    margin-bottom: 3rem;
+}
+
+@media screen and (max-width: 1358px) {
+    .promo__document__block {
+        top: 40px;
+    }
+    .promo__document__text  {
+        font-size: 30px;
+    }
+    input[type="radio"] {
+        transform: scale(1.8);
+        margin-top: 5rem;
+    }
+    label.form-check-label {
+        margin-top: 4.2rem;
+        font-size: 27px;
+    }
+    .footer__text {
+        font-size: 26px;
+    }
+}
+@media screen and (max-width: 1199px) {
+    .promo__document__text  {
+        font-size: 27px;
+    }
+    input[type="radio"] {
+        transform: scale(1.6);
+        margin-top: 4.5rem;
+    }
+    label.form-check-label {
+        margin-top: 3.85rem;
+        font-size: 24px;
+    }
+    .footer__text {
+        font-size: 22px;
+    }
+}
+@media screen and (max-width: 767px) {
+    label.form-check-label {
+        margin-top: 4.1rem;
+        font-size: 19px;
+    }
+    .footer__text {
+        font-size: 19px;
+    }
+    .container__block {
+        padding: 0 2rem;
+    }
+    .footer__block {
+        padding: 1rem;
+    }
+}
+@media screen and (max-width: 475px) {
+    .promo__document__text  {
+        font-size: 23px;
+    }
+    input[type="radio"] {
+        transform: scale(1.3);
+        margin-top: 4rem;
+    }
+    label.form-check-label {
+        margin-top: 3.69rem;
+        font-size: 17px;
+    }
+    .footer__text {
+        font-size: 17px;
+    }
+}
+@media screen and (max-width: 436px) {
+    label.form-check-label {
+        margin-top: 3.85rem;
+        font-size: 15px;
+    }
+}
+@media screen and (max-width: 398px) {
+    input[type="radio"] {
+        transform: scale(1.2);
+        margin-top: 3.5rem;
+    }
+    label.form-check-label {
+        margin-top: 3.4rem;
+        font-size: 13px;
+    }
+    .input-group-lg>.form-control {
+        font-size: 1rem;
+    }
 }
