--- a/css/news.css
+++ b/css/news.css
@@ -47,6 +47,80 @@
     top: 6px;
     display: inline-block;
 }
+.red__line {
+    width: 28px;
+    height: 49px;
+}
+.padding__align__activity {
+    padding: 1rem 1rem;
+}
+.activity__text {
+    font-size: 18px;
+    color: #9D9D9D;
+}
+.activity__time {
+    font-size: 13px;
+}
+.activity__title {
+    font-size: 23px;
+    color: #791118;
+    margin-top: 1rem;
+    margin-bottom: 1rem !important;
+}
+.mb__align {
+    margin-bottom: 2rem;
+}
+.padding__align {
+    padding-right: 0 !important;
+}
+.activity {
+    margin: auto;
+
+}
+.margin__align__ac {
+    --bs-gutter-x : 0 !important;
+}
+.month {
+    margin-top: 3rem;
+}
+.activity__title a {
+    color: #791118;
+}
+.floating-button {
+    position: fixed; 
+    bottom: 30px;    
+    right: 30px;      
+    padding: 10px 20px;
+    color: white;
+    background-color: #791118;   
+    border: none;   
+    border-radius: 50px;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
+    font-size: 25px;
+}
+.floating-button a, .floating-button a:hover {
+  color: white;
+  text-decoration: none;
+}
+@media screen and (max-width: 1199px) {
+    .activity__text  {
+        font-size: 16px;
+    }
+    .activity__title {
+        font-size: 20px;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem !important;
+    }
+    .red__line {
+        width: 23px;
+        height: 44px;
+    }
+    .month-year {
+        font-size: 34px;
+    }
+   
+}
 @media screen and (max-width: 767px) {
     .flex__container {
         display: flex;
@@ -55,6 +129,13 @@
     .flex__align {
         flex-basis: 60px;
         width: 100%;
+    }
+    .month-year {
+        font-size: 30px;
+    }
+    .red__line {
+        width: 19px;
+        height: 39px;
     }
 }
 @media screen and (max-width: 720px) {
