--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ section{
 }
 
 .container-custom{
-    max-width: 70rem;
+    max-width: 80rem;
     padding: 0 2rem;
     margin: 0 auto;
     display: flex;
@@ -125,7 +125,7 @@ section{
 
 .nav-links > ul{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -712,6 +712,11 @@ p a ,p a:hover{
     margin-top: 1rem;
     margin-right: 1rem;
 }
+.red-cart {
+    font-size:30px;
+    color: #791118; 
+   }
+
 @media screen and (max-width: 1784px) {
     .text-overlay-3 {
         position: absolute;
@@ -1111,6 +1116,13 @@ p a ,p a:hover{
         list-style: none;
         margin-bottom: 0 !important;
         padding-left: 0rem !important;
+    }
+    .margin__left {
+        margin-left: 4rem;
+    }
+    .form-select {
+        width: 30%;
+        margin-left: 2rem;
     }
 }
 
