--- a/css/teacher.css
+++ b/css/teacher.css
@@ -18,41 +18,28 @@
 .my-bg-container {
 position: relative;
 width: 1500px;           /* or a specific width */
-min-height: 400px;     /* give it some height so the background is visible */
+min-height: 1000px;     /* give it some height so the background is visible */
 background: url("../images/background.png") no-repeat center center;
 background-size: cover; /* makes the bg image responsive (cover the container) */
 border-radius: 48px;
 display: block;
 margin: auto;
+margin-bottom: 3rem;
 }
 
-.jakkrit {
+.jakkkrit {
 position: absolute;
 top: 50%;
-left: 50%;
+left: 20%;
 transform: translate(-50%, -50%);
 z-index: 1;
 /* any sizing you need for jakkrit.png */
-width: 150px;  
-height: auto;
-opacity: 0; /* เริ่มต้นโปร่งใส */
-transform: translateY(20px); /* เริ่มจากตำแหน่งที่เลื่อนลงเล็กน้อย */
-animation: fadeIn 3s ease-in forwards; 
-}
-@keyframes fadeIn {
-  from {
-    opacity: 0; /* เริ่มต้นโปร่งใส */
-    transform: translateY(20px); /* เริ่มจากตำแหน่งที่เลื่อนลง */
-  }
-  to {
-    opacity: 1; /* ปลายทางมองเห็นได้ชัด */
-    transform: translateY(0); /* เลื่อนกลับตำแหน่งเดิม */
-  }
+height: 1000px;
 }
 .overlay-text {
     position: absolute; 
     top: 50%;     
-    left: 47%;     
+    left: 56%;     
     transform: translate(-50%, -50%); 
     color: #fff;    
     margin-top: 0rem;
@@ -67,10 +54,29 @@ animation: fadeIn 3s ease-in forwards;
 .align-ul {
     list-style: circle;
     position: absolute; 
-    top: 50%;     
-    left: 47%;     
+    top: 53%;     
+    left: 64%;     
     transform: translate(-50%, -50%); 
     color: #fff;    
     margin-top: 10rem;
     font-size: 25px;
+}
+.button_teacher {
+    display:inline-block;
+    width:180px;
+    white-space: nowrap;
+    overflow:hidden !important;
+    text-overflow: ellipsis;
+}
+.dot_indicator {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border:none;
+    position: relative;
+    bottom: 10px;
+}
+.align__block__teacher__text {
+    height:100%;
+    width: 100%;
 }
